--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,10 +30,11 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "i18n-iso-countries": "^7.13.0",
-    "i18next": "^23.16.5",
+    "i18next": "^23.16.8",
     "lucide-react": "^0.456.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-draw": "^0.20.4",
     "react-responsive-carousel": "^3.2.23",
