Added content moderation using openai through a new endpoint in the backend which is then connected to to the frontend

--- a/backend/.env
+++ b/backend/.env
@@ -18,8 +18,10 @@ SMTP_USER=AKIARZDBHSHW5V6EZKVA
 SMTP_PASSWORD=BNn2ybqb8JmtjozIGzIAMu7/Ud60g4b28ssfEZHWqQUn
 
 PGUSER=postgres
-PGPASSWORD=mIGUYyMeCzfqZrLlB1Dz
-PGHOST=coralbase-postgres-db.cd8sugmaku4l.us-east-2.rds.amazonaws.com
+# PGPASSWORD=mIGUYyMeCzfqZrLlB1Dz
+PGPASSWORD=2023_Max
+# PGHOST=coralbase-postgres-db.cd8sugmaku4l.us-east-2.rds.amazonaws.com
+PGHOST=localhost
 PGPORT=5432
 PGDATABASE=coralbase
 
