--- a/backend/package.json
+++ b/backend/package.json
@@ -21,9 +21,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.5.0",
     "fetch": "^1.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.2",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
