--- a/AI_features/Training/notebooks/YOLO/ultralytics/ultralytics/cfg/models/v10/yolo10s_comb.yaml
+++ b/AI_features/Training/notebooks/YOLO/ultralytics/ultralytics/cfg/models/v10/yolo10s_comb.yaml
@@ -25,22 +25,24 @@ backbone:
   - [-1, 1, SPPF, [1024, 5]] # 9
   - [-1, 1, PSA, [1024]] # 10
 
-# YOLOv10.0n head
+# light weight neck added 
 head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 6], 1, Concat, [1]] # cat backbone P4
-  - [-1, 3, C2f, [512]] # 13
+  - [-1, 3, VoVGSCSP, [512]] # 13
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 4], 1, Concat, [1]] # cat backbone P3
-  - [-1, 3, C2f, [256]] # 16 (P3/8-small)
+  - [-1, 3, VoVGSCSP, [256]] # 16 (P3/8-small)
 
-  - [-1, 1, Conv, [256, 3, 2]]
+  - [-1, 1, GSConv, [256, 3, 2]]
+  - [-1, 1, nn.Upsample, [None, 1.4, "nearest"]]
   - [[-1, 13], 1, Concat, [1]] # cat head P4
-  - [-1, 3, C2f, [512]] # 19 (P4/16-medium)
+  - [-1, 3, VoVGSCSP, [512]] # 19 (P4/16-medium)
 
-  - [-1, 1, SCDown, [512, 3, 2]]
+  - [-1, 1, GSConv, [512, 3, 2]]
+  - [-1, 1, nn.Upsample, [None, 1.15, "nearest"]]
   - [[-1, 10], 1, Concat, [1]] # cat head P5
-  - [-1, 3, C2fCIB, [1024, True, True]] # 22 (P5/32-large)
+  - [-1, 3, VoVGSCSP, [1024]] # 22 (P5/32-large)
 
   - [[16, 19, 22], 1, v10Detect, [nc]] # Detect(P3, P4, P5)
