--- a/AI_features/Training/notebooks/YOLO/ultralytics/ultralytics/cfg/models/v10/yolo10s_lwn.yaml
+++ b/AI_features/Training/notebooks/YOLO/ultralytics/ultralytics/cfg/models/v10/yolo10s_lwn.yaml
@@ -35,12 +35,12 @@ head:
   - [-1, 3, VoVGSCSP, [256]] # 16 (P3/8-small)
 
   - [-1, 1, GSConv, [256, 3, 2]]
-  - [-1, 1, nn.Upsample, [None, 1.4, "nearest"]]
+  # - [-1, 1, nn.Upsample, [None, 1.4, "nearest"]]
   - [[-1, 13], 1, Concat, [1]] # cat head P4
   - [-1, 3, VoVGSCSP, [512]] # 19 (P4/16-medium)
 
   - [-1, 1, GSConv, [512, 3, 2]]
-  - [-1, 1, nn.Upsample, [None, 1.15, "nearest"]]
+  # - [-1, 1, nn.Upsample, [None, 1.15, "nearest"]]
   - [[-1, 10], 1, Concat, [1]] # cat head P5
   - [-1, 3, VoVGSCSP, [1024]] # 22 (P5/32-large)
 
