Implemented Groups in coralbase inspired from reddit subreddits

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["kfra", "maxca", "SCTLD", "uuidv", "uvicorn"]
+  "cSpell.words": [
+    "kfra",
+    "maxca",
+    "SCTLD",
+    "uuidv",
+    "uvicorn"
+  ],
+  "postman.settings.dotenv-detection-notification-visibility": false
 }
