--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,8 +34,9 @@
     "i18n-iso-countries": "^7.13.0",
     "i18next": "^23.16.8",
     "lucide-react": "^0.456.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "^15.3.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-i18next": "^15.4.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-draw": "^0.20.4",
