--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,18 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.726.1",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@langchain/community": "^0.3.43",
+    "@langchain/core": "^0.3.56",
+    "@langchain/openai": "^0.5.10",
     "aws-cli": "^0.0.2",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "buffer": "^6.0.3",
+    "cheerio": "^1.0.0",
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^4.21.1",
     "express-rate-limit": "^7.5.0",
     "fetch": "^1.1.0",
@@ -27,18 +31,20 @@
     "form-data": "^4.0.2",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.3.26",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "openai": "^4.78.1",
-    "pg": "^8.13.1",
+    "pdf.js-extract": "^0.2.1",
+    "pg": "^8.16.0",
     "redis": "^4.7.0",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
     "stream": "^0.0.3",
     "streamifier": "^0.1.1",
-    "uuid": "^11.0.5",
+    "uuid": "^11.1.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
